Fixed Hover on Mobile

--- a/css/dark_styles.css
+++ b/css/dark_styles.css
@@ -24,12 +24,6 @@
   color: #79b9e2;
 }
 
-.dark-mode .theme-toggle:hover,
-.dark-mode .theme-toggle:active {
-  background-color: #fff;
-  color: #243d79;
-}
-
 .dark-mode .light{
     color: inherit;
 } 
