--- a/css/style.css
+++ b/css/style.css
@@ -82,11 +82,6 @@ html {
   display: block;
 }
 
-.theme-toggle:hover, .theme-toggle:active {
-  background-color: #3b3c3d;
-  color: #79b9e2;
-}
-
 .icon-header {
   font-size: 3.5rem;
   color: inherit;
